[tool.poetry]
name = "deep-learning-from-scratch-4"
version = "0.1.0"
description = ""
authors = ["Shion Honda <26x.orc.ed5.1hs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.22.4"

[tool.poetry.dev-dependencies]
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
black = "^22.3.0"
isort = "^5.10.1"
autoflake = "^1.4"
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
